--- a/index.html
+++ b/index.html
@@ -1,16 +1,26 @@
+<!DOCTYPE html>
 <html>
     <head>
+    <title>Any relevant title you want to give</title>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Simple Interest Calculator</h1>
+        <div class="maindiv">
+            Amount <input type="number"  id="principal">  <br/>
+            Rate <input type="range" id="rate" min="minval" max="maxval" value="default_val">  <br/>
+            <span id="rate_val"> 10.25% </span> 
+            No. of Years <select id="years"> <option value="1">1</option><!-- fill in the rest of the values--></select>
+            <input type="number"  id="years">  <br/>
+            Interest : <span id="result"></span><br>
+        </div>    
+        
 
-        Amount <input type="number"  id="principal">  <br/>
-        Rate <input type="number"  id="rate">  <br/>
-        No. of Years <input type="number"  id="years">  <br/>
-        Interest : <span id="result"></span><br>
-
-        <button onclick="compute()">Compute</button>
+    <button onclick="compute()">Compute</button>
+    <span id="result"> /span>
+    <footer>
+        &#169; This Calculator belongs to --your name--
+    </footer>
     </body>
 </html>
