--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
             Amount <input type="number"  id="principal">  <br/>
             Rate <input type="range" id="rate" min="minval" max="maxval" value="default_val">  <br/>
             <span id="rate_val"> 10.25% </span> 
-            No. of Years <select id="years"> <option value="1">1</option><!-- fill in the rest of the values--></select>
+            <select id="years"> <option value="1">1</option>
+            <!-- fill in the rest of the values-->
+            </select>
             <input type="number"  id="years">  <br/>
             Interest : <span id="result"></span><br>
         </div>    
         
 
-    <button onclick="compute()">Compute</button>
+    <button onclick=compute()>"Compute Interest"</button>
     <span id="result"> /span>
     <footer>
         &#169; This Calculator belongs to --your name--
