--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
         <h1>Simple Interest Calculator</h1>
         <div class="maindiv">
             Amount <input type="number"  id="principal">  <br/>
-            Rate <input type="range" id="rate" min="minval" max="maxval" value="default_val">  <br/>
-            <span id="rate_val"> 10.25% </span> 
+            <input type="range" id="rate" min="minval" max="maxval" value="default_val">  <br/>
+            <span id="rate_val"> 
+            10.25% 
+            </span> 
             <select id="years"> <option value="1">1</option>
             <!-- fill in the rest of the values-->
             </select>
@@ -20,9 +22,9 @@
         
 
     <button onclick=compute()>"Compute Interest"</button>
-    <span id="result"> /span>
+    <span id="result"> </span>
     <footer>
-        &#169; This Calculator belongs to --your name--
+        &#169; This Calculator belongs to Raghav Sharma
     </footer>
     </body>
 </html>
