--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <br/>
             
             Rate : <input type="range" id="rate" min="minval" max="maxval" value="default_val">  <span id="rate_val"> 10.25% </span> 
+            onchange = "DisplayChange(this.value)"
             <br/>
             
             No. of Years : <input type="number"  id="years">  <br/>
