--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
             
             Rate : <input type="range" id="rate" min="minval" max="maxval" value="default_val">  <span id="rate_val"> 10.25% </span> 
             onchange = "DisplayChange(this.value)"
+            <script>
+                    function updateRate() 
+                    {
+                        var rateval = document.getElementById("rate").value;
+                        document.getElementById("rate_val").innerText=rateval;
+                    }
+                    </script>
             <br/>
             
             No. of Years : <input type="number"  id="years">  <br/>
