--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
             Amount : <input type="number"  id="principal">  
             <br/>
             
-            Rate : <input type="range" id="rate" min="minval" max="maxval" value="default_val">  <span id="rate_val"> 10.25% </span> 
-            onchange = "DisplayChange(this.value)"
+            Rate : <input type="range" id="rate" min="minval" max="maxval" value="default_val" onchange = "DisplayChange(this.value)">  <span id="rate_val"> 10.25% </span> 
             <script>
                     function updateRate() 
                     {
