--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
     <button onclick=compute()>"Compute Interest"</button>
     <span id="result"> 
     
+    If you deposit 1000000,
+    at an interest rate of 3.5%.
+    You will receive an amount of 175000,
+    in the year 2025
+        
     </span>
     <footer>
         &#169; This Calculator belongs to Raghav Sharma
