--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <button onclick=compute()>"Compute Interest"</button>
     <span id="result"> 
     
-    If you deposit 1000000,
+    "If you deposit 1000000,
     at an interest rate of 3.5%.
     You will receive an amount of 175000,
-    in the year 2025
+    in the year 2025"
         
     </span>
     <footer>
