--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     <span id="result"> 
         
     <br/>
-    "If you deposit 1000000, <br/>
-    at an interest rate of 3.5%. <br/>
-    You will receive an amount of 175000, <br/>
-    in the year 2025" <br/>
+    "If you deposit 1000000," <br/>
+    "at an interest rate of 3.5%." <br/>
+    "You will receive an amount of 175000," <br/>
+    "in the year 2025" <br/>
     <br/> 
     </span>
     <footer>
