--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
     <span id="result"> 
         
     <br/>
-    "If you deposit 1000000," 
+    If you deposit 1000000, 
     <br/>
-    "at an interest rate of 3.5%." 
+    at an interest rate of 3.5%. 
     <br/>
-    "You will receive an amount of 175000," 
+    You will receive an amount of 175000, 
     <br/>
-    "in the year 2025"
+    in the year 2025
     <br/> 
     </span>
     <footer>
