--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <br/>
         </div>    
         
-    <button onclick="compute()">Compute Interest</button>
+    <button id="calculate_button" onclick="compute()">Compute Interest</button>
     <span id="result"> 
         
     <br/>
