--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     <br/>
     <br/>   
    
-    <p> If you deposit </p>  <input type = "button" onclick = "compute()" value = "Compute Interest">  
+    <p> If you deposit </p>  
+    <input type = "button" onclick = "compute()" value = "Compute Interest">  
     <span id="result"> ,  
     <br/>
     <p> at an interest rate of </p> 3.5%. 
