--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       
     <input type = "button" onclick = "compute()" value = "Compute Interest">  
     <br/>
-    <p> If you deposit <span id="result"> , </p>  
+    If you deposit <span id="result"> ,  
     <br/>
     <p> at an interest rate of </p> 3.5%. 
     <br/>
