--- a/index.html
+++ b/index.html
@@ -30,12 +30,9 @@
     <input type = "button" onclick = "compute()" value = "Compute Interest">  
     <br/>
     If you deposit <span id="result"> ,  
-    <br/>
-    <p> at an interest rate of </p> 3.5%. 
-    <br/>
-    <p> You will receive an amount of </p> 175000, 
-    <br/>
-    <p> in the year </p> 2025
+    at an interest rate of 3.5%.
+    You will receive an amount of 175000, 
+    in the year 2025
     <br/> 
     <br/>
         
